* Tue Sep 26 2023 Steven Pritchard <steve@sicura.us> - 6.7.0
- Add AlmaLinux 8 support
- Update module dependencies
- Add Puppet 8 support
- Drop Puppet 6 support

* Mon Aug 21 2023 Rick Gardner <Rick@sicura.us> - 6.6.1
- Add Rhel 9 Hiera data

* Mon Jul 10 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.6.0
- Add RockyLinux 8 support

* Fri Jul 15 2022 Trevor Vaughan <trevor@sicura.us> - 6.5.1
- Support Amazon Linux 2

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.2
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Tue Jan 12 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.4.2
- Fix REFERENCE.md documentation
- Note sebool_use_nfs and sebool_cifs upcoming deprecation

* Tue Jan 12 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.2
- Removed EL6 support

* Wed Jul 29 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 6.4.1-0
- Update upper bound for vox_selinux to < 4.0.0

* Fri Jan 10 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 6.4.0-0
- Add EL8 support
- Update the upper bound of simp-simplib to < 5.0.0

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.4.0-0
- Support puppetlabs/concat 6.x.

* Thu Aug 01 2019 Mike Renfro <renfro@tntech.edu> - 6.3.0-0
- Add 'preserve_perms' attribute to allow users to disable the preservation of
  server-side permissions.
- If this flag is set to `false`, sets `chmod` to `u=rwX,g=rwX,o-rwx`

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.2.0-0
- Add v2 compliance_markup data
- Remove puppet 4 support
- Add puppet 6 support
- Add puppetlabs-stdlib 6 support

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated a URL in the README.md
