@@ -1,6 +1,6 @@
 {
   "name": "simp-rsync",
-  "version": "6.7.0",
+  "version": "6.8.0",
   "author": "SIMP Team",
   "summary": "manage an rsync server, secured by stunnel",
   "license": "Apache-2.0",
@@ -23,19 +23,19 @@
     },
     {
       "name": "simp/rsyslog",
-      "version_requirement": ">= 7.0.0 < 9.0.0"
+      "version_requirement": ">= 7.6.0 < 9.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.5.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "simp/stunnel",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "version_requirement": ">= 6.6.0 < 7.0.0"
     },
     {
       "name": "simp/vox_selinux",
-      "version_requirement": ">= 1.5.2 < 4.0.0"
+      "version_requirement": ">= 3.1.0 < 4.0.0"
     }
   ],
   "operatingsystem_support": [
